<resources>
    <!--Knapper Norsk-->
    <string name="btnStart">Start Spill</string>
    <string name="btnCancel">Avslutt</string>
    <string name="txtHeader">FrogZone</string>
    <string name="btnStats">Statistikk</string>
    <string name="btnOne">1</string>
    <string name="btnTwo">2</string>
    <string name="btnThree">3</string>
    <string name="btnFive">5</string>
    <string name="btnFour">4</string>
    <string name="btnSix">6</string>
    <string name="btnSeven">7</string>
    <string name="btnEight">8</string>
    <string name="btnNine">9</string>
    <string name="btnClear">C</string>
    <string name="btnZero">0</string>
    <string name="btnNext">--></string>

    <string name="btnFiveQ">5 Spørsmål</string>
    <string name="btnTenQ">10 Spørsmål</string>
    <string name="btnTwentyFiveQ">25 Spørsmål</string>
    <string name="btnPrefrences">Preferanser</string>

    <string name="Five">5</string>
    <string name="ten">10</string>
    <string name="twentyFive">25</string>

    <!--Tekst Norsk-->
    <string name="app_name">MatteSpill</string>
    <string name="txtCount">0</string>
    <string name="txtQuestion">Spørsmål</string>
    <string name="hint">skriv ditt svar</string>
    <string name="txtQuestionNum">Spørsmål nr</string>
    <string name="dialog">Er du sikker?</string>
    <string name="positive">Ja</string>
    <string name="negative">Nei</string>
    <string name="lang">Språk</string>
    <string name="btnBack">Tilbake</string>
    <string name="done">Du er ferdig</string>
    <string name="frog">Frog mascot</string>
    <string name="stats">Statistikk</string>
    <string name="selectGame">Velg Spørsmål</string>
    <string name="sporsmal">Oppgaver</string>
    <string name="langTitle">Språk</string>
    <string name="listPref">Velg antall oppgaver</string>
    <string name="tysk">Tysk</string>
    <string name="norsk">Norsk</string>
    <string name="germanCode">de</string>
    <string name="norwegianCode">nb</string>


    <!--Tekst lorem-->
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        Interdum varius sit amet mattis vulputate enim.
        Tincidunt praesent semper feugiat nibh sed pulvinar proin.
        Magna fermentum iaculis eu non diam phasellus vestibulum lorem sed.
        Lacus viverra vitae congue eu. Molestie nunc non blandit massa enim nec dui nunc.
    </string>
    <string name="delete">Delete</string>
    <string name="dummy">dummy</string>
    <string name="results">Fasit</string>
    <string name="game">"Spill "</string>


</resources>