<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bgapp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="104dp"
        android:layout_gravity="center"
        android:layout_marginTop="0dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtCorrect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="2dp"
                android:text="@string/txtGameScreen"
                android:textColor="@color/white"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/txtWrong"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"

                android:layout_marginEnd="50dp"
                android:text="@string/txtGameScreen"
                android:textColor="@color/white"
                android:textSize="22sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/txtQuestionNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/txtQuestionNum"
            android:textColor="@color/white"
            android:textSize="22sp" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_width="290dp"
        android:layout_height="150dp"
        android:orientation="vertical"
        android:background="@drawable/bgquestion">

        <TextView
            android:id="@+id/txtQuestion"
            android:textAlignment="center"
            android:layout_marginTop="40dp"
            android:layout_gravity="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="22sp"
            android:lineSpacingExtra="6dp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/txtQuestion" />

    </LinearLayout>

    <TextView
        android:layout_width="196dp"
        android:layout_height="36dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/bgquestion"
        android:hint="@string/hint"
        android:textAlignment="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp">

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:columnCount="3"
            android:rowCount="4"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnOne"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnOne"
                android:visibility="visible" />

            <Button
                android:id="@+id/btnTwo"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnTwo"
                android:visibility="visible" />

            <Button
                android:id="@+id/btnThree"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnThree"
                android:visibility="visible" />

            <Button
                android:id="@+id/btnFour"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnFour"
                android:visibility="visible" />

            <Button
                android:id="@+id/btnFive"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnFive"
                android:visibility="visible" />

            <Button
                android:id="@+id/btnSix"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnSix"
                android:visibility="visible" />

            <Button
                android:id="@+id/btnSeven"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnSeven"
                android:visibility="visible" />

            <Button
                android:id="@+id/btnEight"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnEight"
                android:visibility="visible" />

            <Button
                android:id="@+id/btnNine"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnNine"
                android:visibility="visible" />

            <Button
                android:id="@+id/btnClear"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnClear"
                android:visibility="visible" />

            <Button
                android:id="@+id/btnZero"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnZero"
                android:visibility="visible" />

            <Button
                android:id="@+id/btnNext"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnNext"
                android:visibility="visible" />
        </GridLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnCancel"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnCancel"
        android:visibility="visible" />

</LinearLayout>