<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PreferencesActivity">

    <PreferenceCategory
        android:title="@string/sporsmal">
        <ListPreference
            android:key="gameMode"
            android:entries="@array/pref_game_option_labels"
            android:entryValues="@array/pref_game_option_values"
            android:title="@string/listPref"
            android:summary="%s"
            android:icon="@drawable/ic_list" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/lang">
        <ListPreference
            android:key="lang_pref"
            android:entries="@array/pref_lang_labels"
            android:entryValues="@array/pref_lang_values"
            android:title="@string/lang"
            android:summary="%s"
            android:icon="@drawable/ic_language" />
    </PreferenceCategory>
</PreferenceScreen>