<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroud_main">

    <Button
        android:id="@+id/btnStartGame"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/btn_play"
        android:contentDescription="@string/btnStart"
        android:elevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <Button
        android:id="@+id/btnPrefrences"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:background="@drawable/btn_prefs"
        android:contentDescription="@string/btnPrefrences"
        android:elevation="4dp"
        app:layout_constraintStart_toEndOf="@+id/btnStartGame"
        app:layout_constraintTop_toBottomOf="@+id/btnStartGame" />

    <Button
        android:id="@+id/btnStats"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:background="@drawable/btn_stats"
        android:contentDescription="@string/btnStats"
        android:elevation="4dp"
        app:layout_constraintEnd_toStartOf="@+id/btnStartGame"
        app:layout_constraintTop_toBottomOf="@+id/btnStartGame" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>